--- a/testons/gwt/src/main/java/it/mate/testons/client/view/LayoutView.ui.xml
+++ b/testons/gwt/src/main/java/it/mate/testons/client/view/LayoutView.ui.xml
@@ -8,7 +8,7 @@
   
     <o:OnsSlidingMenu ui:field="slidingMenu" menuPage="menu">
 
-      <!--     
+      <!-- MENU PANEL -->    
       <g:SimplePanel addStyleNames="menu">
         <o:OnsPage>
           <o:OnsToolbar addStyleNames="app-menu-toolbar-panel">
@@ -21,29 +21,14 @@
           </o:OnsList>
         </o:OnsPage>
       </g:SimplePanel>
-       -->
-    
+
+      <!-- NAVIGATOR PANEL -->    
       <g:SimplePanel addStyleNames="main">
         <o:OnsNavigator ui:field="navigator">
-        
         </o:OnsNavigator>
-      
       </g:SimplePanel>
     
     </o:OnsSlidingMenu>
-    
-    <o:OnsTemplate templateId="menu">
-        <o:OnsPage>
-          <o:OnsToolbar addStyleNames="app-menu-toolbar-panel">
-            <div class="center">App Toolbar</div>
-          </o:OnsToolbar>
-          <o:OnsList addStyleNames="app-menu-list">
-            <o:OnsListItem ui:field="btnSettings" modifier="chevron">
-              <table><tr><td><span class="fa fa-cog"></span></td> <td><span class="app-menu-text">Opzioni</span></td> </tr></table>
-            </o:OnsListItem>
-          </o:OnsList>
-        </o:OnsPage>
-    </o:OnsTemplate>
 
   </g:HTMLPanel>
   
